fixed styling text align li

--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,10 @@ form {
 main ul{
     text-align: center;
     margin-left: -38px;
-    
+}
+
+li{
+  text-align:left;
 }
 
 
